# AutoWeed

./: .gitignore  README.md
launch/: astro_autoweed.launch  autoweed.launch  autoweed_orangetargets.launch  camera.launch  dataset_collector.launch  elroy_autoweed.launch  inference_test.launch  no_gui_autoweed.launch  positioning_test.launch  simulated_target_test.launch  sprayer_test.launch  weed_detector.launch
src/advanced_navigation_driver/: CMakeLists.txt
src/advanced_navigation_driver/src/: an_driver.cpp  an_packet_protocol.c  an_packet_protocol.h  spatial_packets.c  spatial_packets.h
src/basic_localisation/: CMakeLists.txt  package.xml
src/basic_localisation/src/: basic_positioning.cpp
src/custom_messages/: CMakeLists.txt  package.xml
src/custom_messages/msg/: ImageInfo.msg  SprayerInfo.msg  TargetInfo.msg
src/image_grabber/: CMakeLists.txt  package.xml
src/image_grabber/src/: image_grabber.cpp
src/image_preprocessor/: CMakeLists.txt  package.xml
src/image_preprocessor/src/: image_preprocessor.cpp
src/image_processor/: CMakeLists.txt  package.xml
src/image_processor/src/: image_processor.cpp
src/inference_engine/: CMakeLists.txt  package.xml
src/inference_engine/src/: inference_engine.cpp
src/logging_and_testing/: CMakeLists.txt  package.xml
src/logging_and_testing/src/: position_logger.cpp  publisher1.cpp  publisher2.cpp  subscriber1.cpp  testing.cpp
src/pointgrey_camera_driver/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/pointgrey_camera_driver/launch/: .camera.launch.swp
src/pointgrey_camera_driver/src/: PointGreyCamera.cpp  nodelet.cpp
src/robot_localization/launch/: dual_ekf_navsat_example.launch
src/robot_localization/params/: dual_ekf_navsat_example.yaml
src/robot_localization/src/: navsat_transform.cpp  ros_filter.cpp
src/simple_gui/: CMakeLists.txt  package.xml
src/simple_gui/src/: simple_gui.cpp
src/sprayer_system/: CMakeLists.txt  package.xml
src/tracking_system/: CMakeLists.txt  package.xml
src/tracking_system/src/: OldPosition.cs  experiment.cpp  target_tester.cpp  tracking.cpp
src/weed_detector/: CMakeLists.txt  package.xml
(+6 files in other folders)
