<package format="2">
  <name>autoweed_tracking_core</name>
  <version>1.0.0</version>
  <description>
    This package provides target tracking from position for the face down cameras.
  </description>
  <maintainer email="jake.wood@my.jcu.edu.au">Jake Wooda</maintainer>
  <license>BSD</license>

  <url></url>
  <author>Jake Wood</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>custom_messages</depend>
  <depend>tf2</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
